[gd_scene load_steps=8 format=3 uid="uid://cyxq3fmkosw2b"]

[ext_resource type="Script" uid="uid://68hyd5t84ktd" path="res://scripts/npc.gd" id="1_ikwb4"]
[ext_resource type="Texture2D" uid="uid://75a1ecbt8d0l" path="res://assets/images/moominmama.PNG" id="1_j04um"]
[ext_resource type="Script" path="res://scripts/interact_prompt.gd" id="2_prompt"]
[ext_resource type="PackedScene" uid="uid://cauib76nahvnp" path="res://dialague/dialague.tscn" id="3_rfem8"]

[sub_resource type="SpriteFrames" id="SpriteFrames_7dhfo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_j04um")
}],
"loop": true,
"name": &"idle",
"speed": 1.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ssxb7"]
radius = 576.347

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m5ceg"]
size = Vector2(37.6, 63.4)

[node name="npc" type="CharacterBody2D"]
z_index = 1
position = Vector2(368, 1495)
scale = Vector2(0.5, 0.5)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 4
sprite_frames = SubResource("SpriteFrames_7dhfo")
animation = &"idle"

[node name="chat_detection_area" type="Area2D" parent="."]
script = ExtResource("1_ikwb4")
dialogue_control_path = NodePath("../Dialouge")

[node name="CollisionShape2D" type="CollisionShape2D" parent="chat_detection_area"]
shape = SubResource("CircleShape2D_ssxb7")

[node name="InteractPrompt" type="Label" parent="."]
visible = false
z_index = 100
offset_left = -150.0
offset_top = -400.0
offset_right = 150.0
offset_bottom = -340.0
theme_override_colors/font_color = Color(0.98, 0.96, 0.92, 1)
theme_override_colors/font_shadow_color = Color(0.15, 0.18, 0.16, 0.9)
theme_override_colors/font_outline_color = Color(0.35, 0.31, 0.27, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 28
text = "Press E to interact"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_prompt")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Dialouge" parent="." instance=ExtResource("3_rfem8")]
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-10, -9)
scale = Vector2(10, 10)
shape = SubResource("RectangleShape2D_m5ceg")

[connection signal="body_entered" from="chat_detection_area" to="chat_detection_area" method="_on_chat_detection_area_body_entered"]
[connection signal="body_exited" from="chat_detection_area" to="chat_detection_area" method="_on_chat_detection_area_body_exited"]
